# My_MLOps

./: .gitignore  convert_onnx.py  data.py  model.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
configs/datamodule/: datamodule.yaml
configs/logger/: logger.yaml
configs/model/: model.yaml
configs/trainer/: trainer.yaml
dvcfiles/: trained_model.dvc
models/: model.onnx
